--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,6 +7,18 @@
 
 .home-content {
     width: 90%;
-    max-width: 400px;
+    max-width: 500px;
     margin: 100px auto auto;
+}
+
+.home-content-container {
+    margin-top: 25px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
 }
