Finished first version of EducationPanel and TimeGraph

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,10 @@
+body {
+    background-color: #282c34;
+    max-width: 100%;
+}
+
 .home {
+    max-width: 100%;
     position: absolute;
     background-color: #282c34;
     width: 100vw;
