--- a/src/styles/TimeItem.css
+++ b/src/styles/TimeItem.css
@@ -1,11 +1,12 @@
 .item-container {
     margin-top: 10px;
+    margin-bottom: 5px;
     width: 100%;
     display: flex;
 }
 
 .item-year {
-    width: 50px;
+    width: 60px;
     flex-shrink: 0;
 }
 
@@ -15,12 +16,10 @@
     border-radius: 7px;
     margin-top: 2px;
     flex-shrink: 0;
-    overflow: visible;
     z-index: 0;
 }
 
 .item-dot {
-    position: absolute;
     width: 14px;
     height: 14px;
     border-radius: 7px;
@@ -28,10 +27,11 @@
 
 .item-title {
     min-width: 50px;
-    padding-left: 5px;
+    padding-left: 8px;
     flex-shrink: 0;
     flex-grow: 1;
     flex-basis: 0;
+    margin-bottom: 10px;
 }
 
 .item-location {
@@ -53,13 +53,16 @@
 
 .item-title-text {
     display: block;
+    font-weight: 500;
+    font-size: 12pt;
+    margin-bottom: 5px;
 }
 
 .graph-line {
-    position: relative;
+    margin-left: 4px;
+    margin-top: -7px;
     top: 7px;
     left: 4px;
     width: 6px;
-    background-color: cornflowerblue;
     z-index: -1;
 }
