--- a/src/styles/TitleCard.css
+++ b/src/styles/TitleCard.css
@@ -1,14 +1,11 @@
-.card {
-}
-
-.content {
-
-}
-
 .typo {
     color: white;
 }
 
 .typo-name {
     font-size: 50px;
+}
+
+.last-update-container {
+    flex-grow: 1;
 }
