--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,9 +6,19 @@ body {
 .home {
     max-width: 100%;
     position: absolute;
-    background-color: #282c34;
     width: 100vw;
     height: 100vh;
+}
+
+.home-bg {
+    z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/flims-black.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    filter: blur(10px);
 }
 
 .home-content {
